--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                </a>
             </div>
             <div class="col-md-6 footer-bg-second py-3">
-              <p class="mb-0 text-center text-white">All rights reserved by <a href="http://www.coderawal.ga">CoderAwal &trade;</a></p>
+              <p class="mb-0 text-center text-white">All rights reserved by <a href="http://www.coderawal.ga">Babulakterfsd &trade;</a></p>
             </div>
           </div>
         </div>
